# ffmpegvideodecodedemo

app/src/main/: AndroidManifest.xml
app/src/main/java/android/spport/ffmpegdemo2/: MainActivity.java
app/src/main/java/android/spport/ffmpegdemo2/bean/: DeviceVideoInfoBaseBean.java  DeviceVideoInfoYUVDataBean.java
app/src/main/java/android/spport/ffmpegdemo2/render/: GLGraphicsUtil.java  GLRenderer.java  GLView.java  IOnSetLiveViewCallBack.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: f_convert.glsl  v_simple.glsl
mylibrary2/: build.gradle
mylibrary2/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mylibrary2/src/main/cpp/include/ffmpeg_4.2.4/libavcodec/: avcodec.h  qsv.h
mylibrary2/src/main/cpp/include/ffmpeg_4.2.4/libavfilter/: avfilter.h
mylibrary2/src/main/cpp/include/ffmpeg_4.2.4/libavformat/: avformat.h  avio.h
mylibrary2/src/main/cpp/include/ffmpeg_4.2.4/libavutil/: buffer.h  common.h  fifo.h  hwcontext.h  log.h  opt.h  threadmessage.h
mylibrary2/src/main/cpp/include/ffmpeg_v4.4/: build_android_with_openssl_android_mediacodec.sh  configuration.txt  version.txt
mylibrary2/src/main/cpp/include/ffmpeg_v4.4/libavcodec/: avcodec.h  codec.h  vdpau.h  videotoolbox.h
mylibrary2/src/main/cpp/include/ffmpeg_v4.4/libavfilter/: avfilter.h
mylibrary2/src/main/cpp/include/ffmpeg_v4.4/libavformat/: avformat.h  avio.h
mylibrary2/src/main/cpp/include/ffmpeg_v4.4/libavutil/: buffer.h  common.h  hwcontext.h  log.h  opt.h
mylibrary2/src/main/cpp/include/openssl_v1.0.1t/openssl/: asn1t.h  bio.h  bn.h  crypto.h  dso.h  opensslconf.h  rsa.h  ssl.h  ts.h  ui.h  version.txt  x509_vfy.h
mylibrary2/src/main/cpp/include/openssl_v1.1.1b/openssl/: asn1t.h  bio.h  bn.h  crypto.h  engine.h  ssl.h  store.h  ts.h  ui.h  x509_vfy.h
mylibrary2/src/main/java/android/spport/mylibrary2/: Demo.java
mylibrary2/src/main/jni/arm64-v8a/ffmpeg/v3.2.6/: build_android_with_openssl_android_mediacodec.sh  version.txt
